--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		%sveltekit.head%
 	</head>
 	<!-- Set background color -->
-	<body style="background: lightgrey" data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
