--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang='en'>
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset='utf-8' />
+		<link rel='icon' href='%sveltekit.assets%/favicon.png' />
+		<link rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css' />
+		<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
+		<meta name='viewport' content='width=device-width, initial-scale=1' />
 		%sveltekit.head%
 	</head>
 	<!-- Set background color -->
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data='hover'>
+		<div style='display: contents'>%sveltekit.body%</div>
 	</body>
 </html>
